redefining functions to write password

--- a/index3.html
+++ b/index3.html
@@ -11,21 +11,20 @@
     <script type="text/javascript">
 
         // Set global variable for an array from which password characters will be chosen
-        var charAvail = ""
-        var password = ""
-function generatePassword(){
+        var charAvail = []
+        var password = []
+
         // Set basic user questions to determine password length
-        // while ...
         var charCount = prompt("Please select a character length between 8 and 128?");
-        while ((parseInt(charCount) < 8) || (parseInt(charCount) > 128)) {
+        if ((charCount < 8) || (charCount > 128)) {
             alert("Character count must be between 8 and 128, please refresh and try again. Thank you.");
-            parseInt(charCount) = prompt("Please select a character length between 8 and 128?");
         };
-        
+
         // Prompt to user to determine if numbers are in the password array
         var confNumbers = confirm("Would you like numbers in your password?");
         if (confNumbers === true) {
             charAvail = charAvail + "0123456789";
+            console.log(charAvail);
         } else {
             alert("Ok, no numbers.")
         };
@@ -34,6 +33,7 @@ function generatePassword(){
         var confUpperLetter = confirm("Would you like upper case letters in your password?");
         if (confUpperLetter === true) {
             charAvail = charAvail + "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+            console.log(charAvail);
         } else {
             alert("Ok, no upper case letters.")
         };
@@ -42,6 +42,7 @@ function generatePassword(){
         var confLowerLetter = confirm("Would you like lower case letters in your password?");
         if (confLowerLetter === true) {
             charAvail = charAvail + "abcdefghijklmnopqrstuvwxyz";
+            console.log(charAvail);
         } else {
             alert("Ok, no lower case letters.")
         };
@@ -50,10 +51,10 @@ function generatePassword(){
         var confSpecial = confirm("Would you like special characters in your password?");
         if (confSpecial === true) {
             charAvail = charAvail + "~!@#$%^&*()";
+            console.log(charAvail);
         } else {
             alert("Ok, no special characters.")
         };
-
 
         // Create loop to generate password, log password to track any issues
         for (var i=0; i < charCount; i++) {
@@ -62,10 +63,8 @@ function generatePassword(){
             password = password + passChar;
             console.log(password);
         }
-         
-    }
-} 
-generatePassword()
+
+        alert(password)
 
 // create each of these as a function
 // consider while loop for the char count
